Upgraded Scala version to 2.10.0 - Fixed compile erros. - TODO: fix testcases.